gateway/04-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: roboshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: pandu15/app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: roboshop
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop
  namespace: roboshop
spec:
  parentRefs:
  - name: roboshop
    sectionName: https
  hostnames:
  - "app1.devopswithrani.online"
  rules: 
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app1
      port: 80
