gateway/05-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: roboshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: pandu15/app2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: roboshop
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2
  namespace: roboshop
spec:
  parentRefs:
  - name: roboshop
    sectionName: https
  hostnames:
  - app2.devopswithrani.online
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app2
      port: 80
